SCSS: fix overlapping of dropdown-menu

--- a/frontend/src/styles/learn.scss
+++ b/frontend/src/styles/learn.scss
@@ -43,6 +43,7 @@ pre.widget {
     white-space: normal;
     padding-bottom: 10px;
     position: relative;
+    overflow: initial;
 }
 
 .tab {
